--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,49 +1,5 @@
 on: [push, pull_request, workflow_dispatch]
 
-name: Build
-
 jobs:
   build:
-    runs-on: ubuntu-latest
-    container:
-      image: zmkfirmware/zmk-build-arm:2.5
-    name: Build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Cache west modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-zephyr-modules
-        with:
-          path: |
-            modules/
-            tools/
-            zephyr/
-            bootloader/
-            zmk/
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('manifest-dir/west.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      - name: West Init
-        run: west init -l config
-      - name: West Update
-        run: west update
-      - name: West Zephyr export
-        run: west zephyr-export
-      - name: West Build (rebound_v4)
-        run: west build --pristine -s zmk/app -b nice_nano -- -DSHIELD=rebound_v4 -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: rebound_v4 DTS File
-        if: ${{ always() }}
-        run: cat -n build/zephyr/nice_nano.dts.pre.tmp
-      - name: rebound_v4 Kconfig file
-        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 rebound_v4_nice_nano.uf2
-      - name: Archive (rebound_v4)
-        uses: actions/upload-artifact@v2
-        with:
-          name: firmware
-          path: rebound_v4_nice_nano.uf2
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
