--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,1 +1,5 @@
-build.yml
+on: [push, pull_request, workflow_dispatch]
+
+jobs:
+  build:
+    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
